styling home and header components
