# src/app/api/models.ts
@@ -2,6 +2,7 @@
 /* eslint-disable */
 export { AddressDto } from './models/address-dto';
 export { AuthDto } from './models/auth-dto';
+export { AuthResponse } from './models/auth-response';
 export { JourneyDto } from './models/journey-dto';
 export { PlaceDto } from './models/place-dto';
 export { UserDto } from './models/user-dto';
